fix spacing of elements on mobile

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -26,7 +26,8 @@
 
 .header h3 {
   text-align: center;
-  padding-bottom: 20px;
+  padding-top: 25px;
+  padding-bottom: 10px;
 }
 .footer {
   text-align: center;
@@ -114,7 +115,7 @@ font-size: 25px;}
   opacity: 0;
   position: absolute;
   top: 50%;
-  right: 25%;
+  right: 15%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%)
 }
